<resources>
    <string name="app_name">oneMoreTime</string>
    <string name="et_EventName">Event Name</string>
    <string name="et_EventDate">Event Date</string>
    <string name="tv_setupMatch">Setup Match</string>
    <string name="tv_device">Select Device</string>
    <string name="tv_teamScoutingQuestion">Select Team To Scout</string>
    <string name="tv_selectMatch">Select Match</string>
    <string name="tv_matchNumber">Match</string>
    <string name="btn_startMatch">Start Match</string>
    <string name="btn_plusMatch">+</string>
    <string name="btn_minusMatch">-</string>
    <string name="tv_teamAuto">Text:</string>
    <string name="tv_matchAuto">Match:</string>
    <string name="tv_allianceAuto">Alliance:</string>
    <string name="tv_upperHubAutoHeader">Upper Hub</string>
    <string name="btn_autoPlusL">+</string>
    <string name="tv_upperScoreAuto">Cargo</string>
    <string name="btn_autoMinusL">-</string>
    <string name="tv_lowerHubAutoHeader">Lower Hub</string>
    <string name="btn_autoPlusR">+</string>
    <string name="tv_lowerScoreAuto">Cargo</string>
    <string name="btn_autoMinusR">-</string>
    <string name="tv_scoreQuestionAuto">Cargo</string>
    <string name="cb_taxiing">Taxiing</string>
    <string name="cb_humanPlayerUpper">Human Player Upper Hub</string>
    <string name="humanPlayerLower_checkBox">Human Player Lower Hub</string>
    <string name="cb_upperHubAuto">Upper Hub</string>
    <string name="cb_lowerHubAuto">Lower Hub</string>
    <string name="tv_teamTele">Team:</string>
    <string name="tv_matchTele">Match:</string>
    <string name="tv_allianceTele">Alliance:</string>
    <string name="tv_upperHubTeleHeader">Upper Hub</string>
    <string name="btn_telePlusL">+</string>
    <string name="tv_upperScoreTele">Cargo</string>
    <string name="btn_teleMinusL">-</string>
    <string name="tv_lowerHubTeleHeader">Lower Hub</string>
    <string name="btn_telePlusR">+</string>
    <string name="tv_lowerScoreTele">Cargo</string>
    <string name="btn_teleMinusR">-</string>
    <string name="tv_scoreQuestionTele">Score</string>
    <string name="cb_upperHubShotTele">Upper Hub</string>
    <string name="cb_lowerHubShotTele">Lower Hub</string>
    <string name="tv_endGameQuestion">Endgame</string>
    <string name="tv_climbingQuestion">Climbing</string>
    <string name="tv_attemptedClimbingRungs">Attempted</string>
    <string name="cb_attemptedLow">Low</string>
    <string name="cb_attemptedMid">Mid</string>
    <string name="cb_attemptedHigh">High</string>
    <string name="cb_attemptedTraversal">Traversal</string>
    <string name="tv_successfulClimbingRungs">Successful</string>
    <string name="cb_successfulLow">Low</string>
    <string name="cb_successfulMid">Mid</string>
    <string name="cb_successfulHigh">High</string>
    <string name="cb_successfulTraversal">Traversal</string>
    <string name="tv_penaltiesQuestion">Penalties</string>
    <string name="cb_fouldInTele">Foul</string>
    <string name="cb_techFoulInTele">Tech Foul</string>
    <string name="cb_yellowCardInTele">Yellow Card</string>
    <string name="rb_redCardInTele">Red Card</string>
    <string name="cb_noShowTele">No Show</string>
    <string name="cb_disqualificationTele">Disqualification</string>
    <string name="tv_diabledQuestion">Disabled</string>
    <string name="rb_whoMatchDisabled">Whole Match</string>
    <string name="rb_halfMatchDisabled">Half Match</string>
    <string name="rb_endMatchDisabled">End Match</string>
    <string name="btn_EndMatchSouting">End Match</string>
    <string name="menu_home">home</string>
</resources>