<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/matchTeleLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/veryEpicLightGray">

    <LinearLayout
        android:id="@+id/matchTeleLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_teamTele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_teamTele"/>

        <TextView
            android:id="@+id/tv_matchTele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_matchTele"/>

        <TextView
            android:id="@+id/tv_allianceTele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_allianceTele"/>
    </LinearLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/rapidRaectDarkBlue"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view13"
            android:layout_width="5dp"
            android:layout_height="wrap_content"
            android:background="@color/rapidRaectDarkBlue"
            app:layout_constraintEnd_toEndOf="@+id/tv_upperScoreTele" />

        <TextView
            android:id="@+id/tv_upperHubTeleHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:text="@string/tv_upperHubTeleHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_telePlusL"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="@color/lightGreen"
            android:ems="8"
            android:text="@string/btn_telePlusL"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_upperHubTeleHeader" />

        <TextView
            android:id="@+id/tv_upperScoreTele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:text="@string/tv_upperScoreTele"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_teleMinusL"
            app:layout_constraintEnd_toStartOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_telePlusL" />

        <Button
            android:id="@+id/btn_teleMinusL"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="@color/lightRed"
            android:ems="8"
            android:text="@string/btn_teleMinusL"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/auto_tele_bar"
            app:layout_constraintEnd_toStartOf="@+id/scrollView2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_lowerHubTeleHeader"
            android:layout_width="214dp"
            android:layout_height="26dp"
            android:ems="9"
            android:text="@string/tv_lowerHubTeleHeader"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scrollView2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_telePlusR"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="@color/lightGreen"
            android:ems="9"
            android:text="@string/btn_telePlusR"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scrollView2"
            app:layout_constraintTop_toBottomOf="@+id/tv_lowerHubTeleHeader" />

        <TextView
            android:id="@+id/tv_lowerScoreTele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:text="@string/tv_lowerScoreTele"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_teleMinusR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scrollView2"
            app:layout_constraintTop_toBottomOf="@+id/btn_telePlusR" />

        <Button
            android:id="@+id/btn_teleMinusR"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:backgroundTint="@color/lightRed"
            android:ems="9"
            android:text="@string/btn_teleMinusR"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/auto_tele_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/scrollView2" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/auto_tele_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/matchTeleLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_scoreQuestionTele"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="20"
                    android:text="@string/tv_scoreQuestionTele"
                    android:textStyle="bold"
                    android:textSize="25sp" />

                <View
                    android:id="@+id/view8"
                    android:layout_width="600dp"
                    android:layout_height="5dp"
                    android:background="@color/rapidRaectDarkBlue"/>

                <CheckBox
                    android:id="@+id/cb_upperHubShotTele"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cb_upperHubShotTele"/>


                <CheckBox
                    android:id="@+id/cb_lowerHubShotTele"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cb_lowerHubShotTele"/>

                <TextView
                    android:id="@+id/tv_endGameQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_endGameQuestion"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <View
                    android:id="@+id/view9"
                    android:layout_width="600dp"
                    android:layout_height="5dp"
                    android:background="@color/rapidRaectDarkBlue"/>

                <TextView
                    android:id="@+id/tv_climbingQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_climbingQuestion"
                    android:textStyle="italic"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/tv_attemptedClimbingRungs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_attemptedClimbingRungs"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:id="@+id/matchTeleLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_attemptedLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_attemptedLow"/>

                    <CheckBox
                        android:id="@+id/cb_attemptedMid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_attemptedMid"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/matchTeleLayout8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_attemptedHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_attemptedHigh"/>

                    <CheckBox
                        android:id="@+id/cb_attemptedTraversal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_attemptedTraversal"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_successfulClimbingRungs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_successfulClimbingRungs"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:id="@+id/matchTeleLayout9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_successfulLow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_successfulLow"/>

                    <CheckBox
                        android:id="@+id/cb_successfulMid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_successfulMid"/>

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/matchTeleLayout10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_successfulHigh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_successfulHigh"/>

                    <CheckBox
                        android:id="@+id/cb_successfulTraversal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_successfulTraversal"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_penaltiesQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_penaltiesQuestion"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <View
                    android:id="@+id/view10"
                    android:layout_width="600dp"
                    android:layout_height="5dp"
                    android:background="@color/rapidRaectDarkBlue"/>

                <LinearLayout
                    android:id="@+id/matchTeleLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_fouldInTele"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_fouldInTele"/>

                    <CheckBox
                        android:id="@+id/cb_techFoulInTele"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_techFoulInTele"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchTeleLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_yellowCardInTele"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_yellowCardInTele"/>

                    <CheckBox
                        android:id="@+id/rb_redCardInTele"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/rb_redCardInTele"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/matchTeleLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_noShowTele"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_noShowTele"/>

                    <CheckBox
                        android:id="@+id/cb_disqualificationTele"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="18"
                        android:text="@string/cb_disqualificationTele"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_diabledQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_diabledQuestion"
                    android:textStyle="bold"
                    android:textSize="25sp"/>

                <View
                    android:id="@+id/view11"
                    android:layout_width="600dp"
                    android:layout_height="5dp"
                    android:background="@color/rapidRaectDarkBlue"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_whoMatchDisabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="12"
                        android:text="@string/rb_whoMatchDisabled"/>

                    <RadioButton
                        android:id="@+id/rb_halfMatchDisabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="12"
                        android:text="@string/rb_halfMatchDisabled"/>

                    <RadioButton
                        android:id="@+id/rb_endMatchDisabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="12"
                        android:text="@string/rb_endMatchDisabled"/>
                </RadioGroup>

                <Button
                    android:id="@+id/btn_EndMatchSouting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/rapidRaectDarkBlue"
                    android:text="@string/btn_EndMatchSouting"/>
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/auto_tele_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>








</LinearLayout>